--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
         <button class="button-submit" id="submit-btn">Sign In</button>
 
-        <p class="p">Don't have an account? <span class="span" id="toggle-btn"> <a href="sign2.html">Sign Up</a></span>
+        <p class="p">Don't have an account? <span class="span" id="toggle-btn"> <a
+                    href="sign/sign2.html">SignUp</a></span>
         </p>
-
         <p class="p line">Or With</p>
 
         <div class="flex-row">
