--- a/sign/sign2.html
+++ b/sign/sign2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sign in</title>
-    <link rel="stylesheet" href="css/sign.css">
+    <link rel="stylesheet" href="../css/sign.css">
 </head>
 
 <body>
@@ -40,7 +40,7 @@
 
         <button class="button-submit" id="submit-btn">Sign up</button>
 
-        <p class="p">Don't have an account? <span class="span" id="toggle-btn"><a href="sign1.html">Sign in</a></span>
+        <p class="p">Don't have an account? <span class="span" id="toggle-btn"><a href="../index.html">Sign in</a></span>
         </p>
 
         <p class="p line">Or With</p>
