--- a/sign/sign2.html
+++ b/sign/sign2.html
@@ -40,7 +40,8 @@
 
         <button class="button-submit" id="submit-btn">Sign up</button>
 
-        <p class="p">Don't have an account? <span class="span" id="toggle-btn"><a href="../index.html">Sign in</a></span>
+        <p class="p">Don't have an account? <span class="span" id="toggle-btn"><a href="../index.html">Sign
+                    in</a></span>
         </p>
 
         <p class="p line">Or With</p>
